added card editing

--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,8 @@ html, body {
 .project-card .card-img-top {
 	width: 100%;
 	height: 450px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .process-feature {
 	height: 250px;
