--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,17 @@ textarea.base-input {
 	bottom: 10px;
 	left:0;
 }
+.contact-form{ margin-top:15px;}
+.contact-form .textarea{ min-height:220px; resize:none;}
+.form-control{ box-shadow:none; border-color:#eee; height:49px;}
+.form-control:focus{ box-shadow:none; border-color:#00b09c;}
+.form-control-feedback{ line-height:50px;}
+.main-btn{ background:#00b09c; border-color:#00b09c; color:#fff;}
+.main-btn:hover{ background:#00a491;color:#fff;}
+.form-control-feedback {
+line-height: 50px;
+top: 0px;
+}
 @media (max-width: 900px) {
 	h1.slogan {
 		/*padding: 5px;*/
