--- a/src/style.css
+++ b/src/style.css
@@ -16,15 +16,16 @@ html, body {
 	padding: 0px 8px;
 }
 .headContact {
-	height: 150px;
+	text-align: right;
+    height: 150px;
     line-height: 20px;
-    padding: 20px;
+    padding: 20px 40px;
     font-size: 14px;
-/*}*/
 }
 .slogan {
-	/*padding-top: 5px;*/
     font-size: 40px;
+    width: 100%;
+    margin: 20px auto;
 }
 
 .max-1000 {
