--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@ html, body {
 	overflow-x: hidden;
 	min-width: 300px;
 	-webkit-overflow-scrolling: touch;
+	font-family: 'Open Sans', sans-serif !important;
 }
 .mainLogo {
     padding: 10px;
@@ -25,7 +26,7 @@ html, body {
 }
 .slogan {
     font-size: 40px;
-    width: 100%;
+    width: 80%;
     margin: 20px auto;
 }
 
