--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,9 @@ html, body {
     padding: 30px 40px;
     font-size: 14px;
 }
+.headContact p {
+	font-weight:500;
+}
 .slogan {
     font-size: 40px;
     width: 80%;
